tg-440 fix mensajes para tablas vacias de acuerdo al estilo elegido

--- a/front-end/webapp/src/app/modules/internacion/components/antecedentes-personales/antecedentes-personales.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/antecedentes-personales/antecedentes-personales.component.html
@@ -48,5 +48,5 @@
 		<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
 		<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 	</table>
-	<app-no-data class="table-secondary" *ngIf="personalHistories.length === 0"></app-no-data>
+	<app-no-data class="secondary" *ngIf="personalHistories.length === 0"></app-no-data>
 </section>
