--- a/front-end/webapp/src/assets/styles/mat-mixins.scss
+++ b/front-end/webapp/src/assets/styles/mat-mixins.scss
@@ -49,13 +49,17 @@ $default-color: 100;
 	}
 
 	app-no-data {
-		&.table {
+		&.default{
+			margin-top: -1px;
+		}
+		&.primary {
+			//Solo el primary usa mat-elevation-z8
 			div.no-data {
 				margin-top: -1px;
 				box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.1);
 			}
 		}
-		&.table-secondary {
+		&.secondary {
 			div.no-data {
 				margin-top: -1px;
 				border: solid 1px #A8A8A8;
