--- a/front-end/webapp/src/app/modules/internacion/components/medicacion/medicacion.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/medicacion/medicacion.component.html
@@ -1,14 +1,14 @@
-<h2 class="mat-h2" [translate]="'internaciones.anamnesis.medicacion.TITLE'"></h2>
+<h2 class="mat-h2" [translate]="title"></h2>
 <mat-card>
 	<mat-card-content>
 		<app-concepts-search *ngIf="!snomedConcept else medicacionForm"
-			[label]="'internaciones.anamnesis.medicacion.MEDICATION'"
+			[label]="title"
 			(onSelect)=setConcept($event)>
 		</app-concepts-search>
 		<ng-template #medicacionForm>
 			<form [formGroup]="form" (ngSubmit)="addToList()">
 				<mat-form-field appearance="outline">
-					<mat-label [translate]="'internaciones.anamnesis.medicacion.MEDICATION'">
+					<mat-label [translate]="title">
 					</mat-label>
 					<input matInput type="text" formControlName="snomed" name="snomed" readonly matTooltip="{{ snomedConcept.pt }}">
 					<button id="clear" mat-button matSuffix color="warn" mat-icon-button
@@ -24,7 +24,7 @@
 						</textarea>
 				</mat-form-field>
 
-				<div class="margin-bottom">
+				<div class="margin-bottom" *ngIf="!hideSuspended">
 					<mat-checkbox formControlName="suspended">
 						<span [translate]="'internaciones.anamnesis.medicacion.form.SUSPENDED'"></span>
 					</mat-checkbox>
