--- a/front-end/webapp/src/app/modules/auth/routes/home/home.component.html
+++ b/front-end/webapp/src/app/modules/auth/routes/home/home.component.html
@@ -4,7 +4,7 @@
 			<mat-card-title>Instituciones</mat-card-title>
 		</mat-card-header>
 		<mat-card-content>
-			<mat-action-list role="list" *ngIf="(institutions$ | async) as institutions; else loading">
+			<mat-action-list role="list" *ngIf="institutions !== null; else loading">
 				<div mat-subheader [ngSwitch]="institutions.length">
 					<span *ngSwitchCase="0">No tiene acceso a instituciones</span>
 					<span *ngSwitchCase="1">Tiene acceso a la siguiente institución:</span>
@@ -14,12 +14,22 @@
 					<mat-icon mat-list-icon fontSet="material-icons-outlined">verified_user</mat-icon>
 					<h3 matLine >{{institution.name}}</h3>
 				</mat-list-item>
-				<mat-divider></mat-divider>
 			</mat-action-list>
 		</mat-card-content>
 		<ng-template #loading>
 			<mat-progress-bar mode="indeterminate"></mat-progress-bar>
 		</ng-template>
-
+	</mat-card>
+	<div class="space"></div>
+	<mat-card *ngIf="backoffice">
+		<mat-card-header>
+			<mat-card-title>Acceso de administrador</mat-card-title>
+		</mat-card-header>
+		<mat-action-list role="list">
+			<mat-list-item role="listitem" (click)="ingresar({id: -1})">
+				<mat-icon mat-list-icon fontSet="material-icons-outlined">verified_user</mat-icon>
+				<h3 matLine >Backoffice</h3>
+			</mat-list-item>
+		</mat-action-list>
 	</mat-card>
 </app-content>
