--- a/front-end/webapp/src/app/modules/internacion/components/epicrisis-form/epicrisis-form.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/epicrisis-form/epicrisis-form.component.html
@@ -11,9 +11,10 @@
 					<mat-form-field appearance="outline">
 						<input matInput
 							   type="text"
-							   formControlName="mainDiagnosis"
+							   formControlName="snomed"
 							   name="snomed"
 							   readonly
+							   matTooltip="{{ this.form.value.snomed }}"
 						>
 					</mat-form-field>
 				</mat-card-content>
@@ -33,13 +34,13 @@
 				<tr mat-row *matRowDef="let row; columns: diagnosis.displayedColumns;"></tr>
 
 				<ng-container matColumnDef="select">
-					<th mat-header-cell *matHeaderCellDef>
+					<th mat-header-cell class="actions" *matHeaderCellDef>
 						<mat-checkbox (change)="$event ? masterToggle(diagnosis.data, diagnosis.selection) : null"
 									  [checked]="diagnosis.selection.hasValue() && isAllSelected(diagnosis.data, diagnosis.selection)"
 									  [indeterminate]="diagnosis.selection.hasValue() && !isAllSelected(diagnosis.data, diagnosis.selection)">
 						</mat-checkbox>
 					</th>
-					<td mat-cell *matCellDef="let row">
+					<td mat-cell class="actions" *matCellDef="let row">
 						<mat-checkbox (click)="$event.stopPropagation()"
 									  (change)="$event ? diagnosis.selection.toggle(row) : null"
 									  [checked]="diagnosis.selection.isSelected(row)">
@@ -64,13 +65,13 @@
 				<tr mat-row *matRowDef="let row; columns: personalHistories.displayedColumns;"></tr>
 
 				<ng-container matColumnDef="select">
-					<th mat-header-cell *matHeaderCellDef>
+					<th mat-header-cell class="actions" *matHeaderCellDef>
 						<mat-checkbox (change)="$event ? masterToggle(personalHistories.data, personalHistories.selection) : null"
 									  [checked]="personalHistories.selection.hasValue() && isAllSelected(personalHistories.data, personalHistories.selection)"
 									  [indeterminate]="personalHistories.selection.hasValue() && !isAllSelected(personalHistories.data, personalHistories.selection)">
 						</mat-checkbox>
 					</th>
-					<td mat-cell *matCellDef="let row">
+					<td mat-cell class="actions" *matCellDef="let row">
 						<mat-checkbox (click)="$event.stopPropagation()"
 									  (change)="$event ? personalHistories.selection.toggle(row) : null"
 									  [checked]="personalHistories.selection.isSelected(row)">
@@ -96,13 +97,13 @@
 				<tr mat-row *matRowDef="let row; columns: familyHistories.displayedColumns;"></tr>
 
 				<ng-container matColumnDef="select">
-					<th mat-header-cell *matHeaderCellDef>
+					<th mat-header-cell class="actions" *matHeaderCellDef>
 						<mat-checkbox (change)="$event ? masterToggle(familyHistories.data, familyHistories.selection) : null"
 									  [checked]="familyHistories.selection.hasValue() && isAllSelected(familyHistories.data, familyHistories.selection)"
 									  [indeterminate]="familyHistories.selection.hasValue() && !isAllSelected(familyHistories.data, familyHistories.selection)">
 						</mat-checkbox>
 					</th>
-					<td mat-cell *matCellDef="let row">
+					<td mat-cell class="actions" *matCellDef="let row">
 						<mat-checkbox (click)="$event.stopPropagation()"
 									  (change)="$event ? familyHistories.selection.toggle(row) : null"
 									  [checked]="familyHistories.selection.isSelected(row)">
@@ -128,13 +129,13 @@
 				<tr mat-row *matRowDef="let row; columns: allergies.displayedColumns;"></tr>
 
 				<ng-container matColumnDef="select">
-					<th mat-header-cell *matHeaderCellDef>
+					<th mat-header-cell class="actions" *matHeaderCellDef>
 						<mat-checkbox (change)="$event ? masterToggle(allergies.data, allergies.selection) : null"
 									  [checked]="allergies.selection.hasValue() && isAllSelected(allergies.data, allergies.selection)"
 									  [indeterminate]="allergies.selection.hasValue() && !isAllSelected(allergies.data, allergies.selection)">
 						</mat-checkbox>
 					</th>
-					<td mat-cell *matCellDef="let row">
+					<td mat-cell class="actions" *matCellDef="let row">
 						<mat-checkbox (click)="$event.stopPropagation()"
 									  (change)="$event ? allergies.selection.toggle(row) : null"
 									  [checked]="allergies.selection.isSelected(row)">
@@ -167,13 +168,13 @@
 				<tr mat-row *matRowDef="let row; columns: inmunizations.displayedColumns;"></tr>
 
 				<ng-container matColumnDef="select">
-					<th mat-header-cell *matHeaderCellDef>
+					<th mat-header-cell class="actions" *matHeaderCellDef>
 						<mat-checkbox (change)="$event ? masterToggle(inmunizations.data, inmunizations.selection) : null"
 									  [checked]="inmunizations.selection.hasValue() && isAllSelected(inmunizations.data, inmunizations.selection)"
 									  [indeterminate]="inmunizations.selection.hasValue() && !isAllSelected(inmunizations.data, inmunizations.selection)">
 						</mat-checkbox>
 					</th>
-					<td mat-cell *matCellDef="let row">
+					<td mat-cell class="actions" *matCellDef="let row">
 						<mat-checkbox (click)="$event.stopPropagation()"
 									  (change)="$event ? inmunizations.selection.toggle(row) : null"
 									  [checked]="inmunizations.selection.isSelected(row)">
