tg-442 eliminar diagnosticos desde ficha de paciente

--- a/front-end/webapp/src/app/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
+++ b/front-end/webapp/src/app/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
@@ -44,7 +44,7 @@
 						<app-main-diagnosis-summary [internmentEpisodeId]="internmentEpisodeId"></app-main-diagnosis-summary>
 					</section>
 					<section>
-						<app-diagnosis-summary [internmentEpisodeId]="internmentEpisodeId"></app-diagnosis-summary>
+						<app-diagnosis-summary [internmentEpisodeId]="internmentEpisodeId" [editable]="!epicrisisDoc"></app-diagnosis-summary>
 					</section>
 				</div>
 			</div>
