tg-455 [BE] Se corrigen datos de vacunas y medicacion en documentos de Anamnesis y Epicrisis

--- a/back-end/hospital-api/src/main/resources/templates/epicrisis.html
+++ b/back-end/hospital-api/src/main/resources/templates/epicrisis.html
@@ -86,6 +86,20 @@
         </dl>
     </div>
 
+
+    <h3>Vacunas</h3>
+    <div class="row" th:if="${#lists.isEmpty(inmunizations)}">
+        <dl>
+            <dd><p>Sin cambios registrados</p></dd>
+        </dl>
+    </div>
+    <div class="row" th:if="${not #lists.isEmpty(inmunizations)}">
+        <dl th:each="inmunization,iter: ${inmunizations}">
+            <dd><p  th:text="${'- ' + inmunization.snomed.pt}"></p></dd>
+            <strong>Observaciones: </strong><label  th:text="${inmunization.note}"></label>
+        </dl>
+    </div>
+
     <h3>Medicación ambulatoria</h3>
     <div class="row" th:if="${#lists.isEmpty(medications)}">
         <dl>
@@ -96,14 +110,6 @@
         <dl th:each="medication,iter: ${medications}">
             <dd><p  th:text="${'- ' + medication.snomed.pt}"></p></dd>
             <strong>Observaciones: </strong><label  th:text="${medication.note}"></label>
-        </dl>
-    </div>
-
-
-    <h3>Medicación ambulatoria</h3>
-    <div class="row">
-        <dl>
-            <dd><p >Sin cambios registrados</p></dd>
         </dl>
     </div>
 
