tg-429 acomoda style diagnostico princiapl en epicrisis

--- a/front-end/webapp/src/app/modules/internacion/components/epicrisis-form/epicrisis-form.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/epicrisis-form/epicrisis-form.component.html
@@ -6,6 +6,7 @@
 		</section>
 
 		<section id="mainDiagnosis">
+			<h2 class="mat-h2" [translate]="'internaciones.epicrisis.diagnosticos.TITLE_PRINCIPAL'"></h2>
 			<mat-card>
 				<mat-card-content>
 					<mat-form-field appearance="outline">
