tg-463 add spinner en modal para eliminar diagnostico

--- a/front-end/webapp/src/app/modules/internacion/components/epicrisis-form/epicrisis-form.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/epicrisis-form/epicrisis-form.component.html
@@ -7,7 +7,7 @@
 
 		<section id="mainDiagnosis">
 			<h2 class="mat-h2" [translate]="'internaciones.epicrisis.diagnosticos.TITLE_PRINCIPAL'"></h2>
-			<mat-card>
+			<mat-card class="main-diagnosis">
 				<mat-card-content>
 					<mat-form-field appearance="outline">
 						<input matInput
