tg-467 Agrego acceso al listado de Instituciones

--- a/front-end/webapp/src/app/modules/auth/routes/login/login.component.scss
+++ b/front-end/webapp/src/app/modules/auth/routes/login/login.component.scss
@@ -1,5 +1,5 @@
+@import '../../../../../assets/styles/mixins';
 
-mat-card {
-	max-width: 400px;
-	margin: 15vh auto;
+mat-card.mat-card {
+	@include card-centered;
 }
