--- a/front-end/webapp/src/app/modules/home/routes/profile/profile.component.html
+++ b/front-end/webapp/src/app/modules/home/routes/profile/profile.component.html
@@ -1,4 +1,4 @@
-<app-content width="full">
+<app-content width="narrow">
 	<mat-card>
 		<mat-card-header>
 			<mat-card-title>Mi cuenta</mat-card-title>
