--- a/front-end/webapp/src/app/app.component.html
+++ b/front-end/webapp/src/app/app.component.html
@@ -1,6 +1,8 @@
-<ng-container *ngIf="(menuItems$ | async) as menuItems; else loading">
-	<app-main-layout [menuItems]="menuItems"></app-main-layout>
-</ng-container>
-<ng-template #loading>
-	<mat-progress-bar mode="indeterminate"></mat-progress-bar>
-</ng-template>
+<div class="app mat-typography mat-app-background">
+	<ng-container *ngIf="(menuItems$ | async) as menuItems; else loading">
+		<app-main-layout [menuItems]="menuItems"></app-main-layout>
+	</ng-container>
+	<ng-template #loading>
+		<mat-progress-bar mode="indeterminate"></mat-progress-bar>
+	</ng-template>
+</div>
