tg-465 Restauro footer

--- a/front-end/webapp/src/app/modules/presentation/components/main-layout/main-layout.component.html
+++ b/front-end/webapp/src/app/modules/presentation/components/main-layout/main-layout.component.html
@@ -15,7 +15,10 @@
 		</mat-sidenav>
 
 		<mat-sidenav-content>
-			<router-outlet></router-outlet>
+			<div class="panel">
+				<router-outlet></router-outlet>
+			</div>
+			<app-footer></app-footer>
 		</mat-sidenav-content>
 	</mat-sidenav-container>
 </div>
