--- a/front-end/webapp/src/app/modules/presentation/components/main-layout/main-layout.component.scss
+++ b/front-end/webapp/src/app/modules/presentation/components/main-layout/main-layout.component.scss
@@ -16,6 +16,20 @@ app-bar {
 	/* When the sidenav is not fixed, stretch the sidenav container to fill the available space. This
 	   causes `<mat-sidenav-content>` to act as our scrolling element for desktop layouts. */
 	flex: 1;
+
+	mat-sidenav-content {
+		display: flex;
+		flex-direction: column;
+		align-items: stretch;
+
+		.panel {
+			flex-grow: 1;
+		}
+
+		app-footer {
+			flex-shrink: 0;
+		}
+	}
 }
 
 .layout-is-mobile {
