--- a/front-end/webapp/src/app/modules/presentation/components/table/table.component.html
+++ b/front-end/webapp/src/app/modules/presentation/components/table/table.component.html
@@ -27,4 +27,9 @@
 	<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
 	<tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 </table>
+<mat-paginator *ngIf="(paginationEnabled) && (dataSource?.data?.length !== 0)"
+			   class="{{mainStyle}}"
+			   [pageSizeOptions]="[5, 10, 50]"
+			   showFirstLastButtons>
+</mat-paginator>
 <app-no-data class="{{mainStyle}}" *ngIf="dataSource?.data?.length === 0"></app-no-data>
