tg-449 [FE] Se agrego filtrado de conceptos snowstorm por ECL

--- a/front-end/webapp/src/app/modules/internacion/components/alergias/alergias.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/alergias/alergias.component.html
@@ -2,6 +2,7 @@
 <mat-card>
 	<mat-card-content>
 		<app-concepts-search  *ngIf="!snomedConcept else alergiasForm"
+			[eclFilter]="SEMANTICS_CONFIG.allergy"
 			[label]="'internaciones.anamnesis.alergias.ALLERGY'"
 			(onSelect)=setConcept($event)>
 		</app-concepts-search>
