--- a/front-end/webapp/src/app/modules/internacion/components/diagnosticos/diagnosticos.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/diagnosticos/diagnosticos.component.html
@@ -3,6 +3,7 @@
 	<mat-card-content>
 		<app-concepts-search *ngIf="!snomedConcept else diagnosisForm"
 			[label]="'internaciones.anamnesis.diagnosticos.DIAGNOSIS'"
+			[eclFilter]="SEMANTICS_CONFIG.diagnosis"
 			(onSelect)=setConcept($event)>
 		</app-concepts-search>
 		<ng-template #diagnosisForm>
