--- a/front-end/webapp/src/app/modules/auth/auth.component.html
+++ b/front-end/webapp/src/app/modules/auth/auth.component.html
@@ -1,1 +1,6 @@
-<router-outlet></router-outlet>
+<ng-container>
+	<app-main-layout></app-main-layout>
+</ng-container>
+<ng-template #loading>
+	<mat-progress-bar mode="indeterminate"></mat-progress-bar>
+</ng-template>
