--- a/front-end/webapp/src/app/modules/institucion/institucion.component.html
+++ b/front-end/webapp/src/app/modules/institucion/institucion.component.html
@@ -1,2 +1,6 @@
-
-<router-outlet></router-outlet>
+<ng-container *ngIf="(menuItems$ | async) as menuItems; else loading">
+	<app-main-layout [menuItems]="menuItems"></app-main-layout>
+</ng-container>
+<ng-template #loading>
+	<mat-progress-bar mode="indeterminate"></mat-progress-bar>
+</ng-template>
