tg-493. Falta de ortografía en pdf de nota de evolución

--- a/back-end/hospital-api/src/main/resources/templates/anamnesis.html
+++ b/back-end/hospital-api/src/main/resources/templates/anamnesis.html
@@ -61,7 +61,7 @@
 		</dl>
 	</div>
 
-	<h3>Datos antropometricos</h3>
+	<h3>Datos antropométricos</h3>
 
 	<div class="row" th:if="${anthropometricData == null}">
 		<dl>
