--- a/back-end/hospital-api/src/main/resources/templates/evolutionnote.html
+++ b/back-end/hospital-api/src/main/resources/templates/evolutionnote.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-	<h2>Nota de evaluación</h2>
+	<h2>Nota de evolución</h2>
 	<p>Internación</p>
 
 	<h3>Paciente</h3>
@@ -61,7 +61,7 @@
 		</dl>
 	</div>
 
-	<h3>Datos antropometricos</h3>
+	<h3>Datos antropométricos</h3>
 
 	<div class="row" th:if="${anthropometricData == null}">
 		<dl>
