--- a/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.scss
+++ b/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.scss
@@ -31,19 +31,19 @@
 			}
 		}
 		.vital-signs {
-			.field-container {
-				display: flex;
-				flex-direction: column;
-				mat-form-field {
-					width: 90%;
-				}
-			}
-
 			.row-container {
 				display: flex;
 				flex-direction: row;
-				justify-content: flex-start;
-				align-items: flex-end;
+				.field-container {
+					.mat-form-field {
+						width: 95%;
+						::ng-deep .mat-form-field-wrapper {
+							padding-bottom: 0;
+						}
+						margin-bottom: -5px;
+					}
+					margin-bottom: 10px;
+				}
 			}
 		}
 	}
