--- a/front-end/webapp/src/app/modules/internacion/components/effective-time/effective-time.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/effective-time/effective-time.component.html
@@ -1,3 +1,6 @@
 <div class="flex-row">
-	<em>{{ dateObj | date: 'dd/MM/yy, HH:mm' }} hs</em>
+	<span>{{ dateObj | date: 'dd/MM/yy - HH:mm' }}hs</span>
+	<button type="button" color="primary" mat-icon-button (click)="openDialog()" matTooltip="Ajustar fecha y hora">
+		<mat-icon>settings</mat-icon>
+	</button>
 </div>
