--- a/front-end/webapp/src/app/modules/presentation/components/signo-vital-current-previous/signo-vital-current-previous.component.html
+++ b/front-end/webapp/src/app/modules/presentation/components/signo-vital-current-previous/signo-vital-current-previous.component.html
@@ -8,15 +8,27 @@
 				<span class="mat-caption">Último resultado</span>
 			</div>
 			<div class="current-value">
-				<span>{{ vitalSign.currentValue || '-' }}</span>
+				<mat-icon *ngIf="vitalSign.currentValue.effectiveTime" inline color="accent"
+					matTooltip="{{ vitalSign.currentValue.effectiveTime | date: 'dd/MM/yy - HH:mm' }} hs">
+					access_time
+				</mat-icon>
+				<span class="value">
+					{{ vitalSign.currentValue.value || '-' }}
+				</span>
 			</div>
 		</div>
 		<mat-divider inset></mat-divider>
 		<div class="flex-row">
 			<span class="mat-caption">Anterior</span>
-			<span class="mat-body-1">
-				{{ vitalSign.previousValue || '-' }}
-			</span>
+			<div class="flex-row">
+				<mat-icon *ngIf="vitalSign.previousValue.effectiveTime" inline color="accent"
+					matTooltip="{{ vitalSign.previousValue.effectiveTime | date: 'dd/MM/yy - HH:mm' }} hs">
+					access_time
+				</mat-icon>
+				<span class="mat-body-1">
+					{{ vitalSign.previousValue.value || '-' }}
+				</span>
+			</div>
 		</div>
 	</div>
 </mat-card>
