tg-492 limpiar y deshabilitar campos siguientes al modificar alguno en creacion de internacion

--- a/front-end/webapp/src/app/modules/internacion/routes/new-internment/new-internment.component.html
+++ b/front-end/webapp/src/app/modules/internacion/routes/new-internment/new-internment.component.html
@@ -36,7 +36,7 @@
 										name="sectorId"
 										formControlName="sectorId"
 										placeholder="{{'pacientes.form.SELECT' | translate}}"
-										(selectionChange)="setService()">
+										(selectionChange)="setServices()">
 								<mat-option *ngFor="let sector of sectors"
 											[value]="sector.id">
 									{{sector.description}}
@@ -54,7 +54,7 @@
 										name="serviceId"
 										formControlName="serviceId"
 										placeholder="{{'pacientes.form.SELECT' | translate}}"
-										(selectionChange)="setRoom()">
+										(selectionChange)="setRooms()">
 								<mat-option *ngFor="let service of services"
 											[value]="service.id">
 									{{service.name}}
